...
                pickerView()
                ListView(filter: selectedFilter)
            }
            .navigationTitle("To Dos")
            .toolbar(content: {
                EditButton()
                    .accessibilityIdentifier("toDoEditButton")
            })
        }
        .navigationViewStyle(
            .stack
        )
        .onAppear {
...
